@@ -18,6 +18,13 @@ along with the GNU MP Library; see the file COPYING.LIB.  If not, write to
 the Free Software Foundation, Inc., 59 Temple Place - Suite 330, Boston,
 MA 02111-1307, USA.
 
+2003-09-27  Torbjorn Granlund  <tege@swox.com>
+
+	* mpn/powerpc64/rsh1add_n.asm: New file.
+	* mpn/powerpc64/rsh1sub_n.asm: New file.
+	* mpn/powerpc64/rshift.asm: Rewrite.
+	* mpn/powerpc64/lshift.asm: Rewrite.
+
 2003-09-26  Torbjorn Granlund  <tege@swox.com>
 
 	* mpn/powerpc64/addlsh1_n.asm: New file.
